# compai

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml
compai/: __init__.py  compai.py
docs/: index.md
fp/: __init__.py
search/: search_index.json
tests/: test_compai.py
