[tool.poetry]
name = "compai"
version = "0.1.0"
description = "Cool functional primitives to have"
authors = ["Fernando Martínez González <frndmartinezglez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest-xdist = "^2.2.0"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
