[tool.poetry]
name = "compai"
version = "0.1.2"
description = "Cool functional primitives to have"
authors = ["Fernando Martínez González <frndmartinezglez@gmail.com>"]
license = "MIT"
repository = "https://github.com/frndmg/compai"

[tool.poetry.dependencies]
python = "^3.8"

mkdocs = {version = "^1.1.2", optional = true}
mkdocstrings = {version = "^0.15.0", optional = true}
mkdocs-material = {version = "^7.0.4", optional = true}

[tool.poetry.dev-dependencies]
pytest-xdist = "^2.2.0"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocstrings", "mkdocs-material"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
