[tool.poetry]
name = "compai"
version = "0.1.2"
description = "Functional primitives for python"
authors = ["Fernando Martínez González <frndmartinezglez@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/frndmg/compai"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^3.7.0", python = "<3.7"}

mkdocs = {version = "^1.1.2", optional = true}
mkdocstrings = {version = "^0.15.0", optional = true}
mkdocs-material = {version = "^7.0.4", optional = true}

[tool.poetry.dev-dependencies]
pytest-xdist = "^2.2.0"
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
isort = "^5.7.0"
tox = "^3.23.0"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocstrings", "mkdocs-material"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
